# telegram_bot

./: .gitignore  README.md  pyproject.toml
src/: config.py  handlers.py  main.py  utils.py
src/classes/: abctract_db_connector.py  abstract_student.py  db_connector.py  student.py
tests/: test_db_connector.py  test_main.py  test_utils.py
