[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Julya Shapaeva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.1.1"
telebot = "^0.0.5"
telegram = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
